native access warnings docs